changement chemin logo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <nav id="titre">
         <img
-          src="/logo orange meca.jpg"
+          src="/logo-orange-meca.jpg"
           alt="logo orange mecalcoolique"
           width="350"
         />
